# dropbox-simulator

./: CMakeLists.txt  README.md
client-side/: Box.cpp  Box.h  Client.cpp  Client.h  File.cpp  File.h  FileManager.cpp  FileManager.h  SystemDAO.cpp  SystemDAO.h  box_main.cpp  main.cpp
client-side/include/: Box.h  Client.h  File.h  FileManager.h  SystemDAO.h
client-side/source/: Box.cpp  Client.cpp  File.cpp  FileManager.cpp  SystemDAO.cpp  box_main.cpp  test.txt
server-side/: Server.cpp  Server.h  SystemDAOWarehouse.cpp  SystemDAOWarehouse.h  Warehouse.cpp  Warehouse.h  warehouse_main.cpp
server-side/include/: Server.h  SystemDAOWarehouse.h  Warehouse.h
server-side/source/: Server.cpp  SystemDAOWarehouse.cpp  Warehouse.cpp  warehouse_main.cpp
temp-stuff/: main  main.cpp  main_inotify.cpp
test-files/: file.txt
tests/: tests_user_interface.cpp
utils/: Instruction.cpp  Instruction.h  Utility.cpp  Utility.h  masterInclude.h
utils/include/: File.h  FileManager.h  Instruction.h  Utility.h  masterInclude.h
utils/source/: File.cpp  FileManager.cpp  Instruction.cpp  Utility.cpp
